Finished majot changes - Will do minor adjustments next

--- a/resources/css/day-theme.css
+++ b/resources/css/day-theme.css
@@ -9,6 +9,18 @@
     color: #2c2f3b !important;
 }
 
+.mobileAdminSideToggle{
+    color: #2c2f3b !important;
+}
+
+.mobileAdminNav li a{
+    color: #2c2f3b !important;
+}
+
+.mobileAdminNavButton{
+    color: #2c2f3b !important;
+}
+
 
 /* Sidebar */
 
