--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -157,14 +157,55 @@
     z-index: 9;
 }
 
+.notificationDropdown a{
+    text-decoration: none !important;
+}
+
+.newFinalizeRequest{
+    background-color: #42a5f5 !important;
+}
+
+.declinedFinalizeRequest{
+    background-color: #e57373 !important;
+}
+
+.newApprovedJob{
+    background-color: #4db6ac  !important;
+}
+
+.newFinishedJob{
+    background: linear-gradient(45deg, #1fa2ff, #12d8fa, #a6ffcb);
+}
+
+.dangerBadge{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: red !important;
+}
+
+
+
 /* Color */
 
 .customToastHeader {
     background-color: #00c853 !important;
+    color: white !important;
 }
 
 .customToastBody {
     background-color: #00e676 !important;
+    color: white !important;
+}
+
+.errorToast-header {
+    background-color: #d11b1f !important;
+    color: white !important;
+}
+
+.errorToastBody {
+    background-color: #e04649 !important;
+    color: white !important;
 }
 
 /* Notification */
@@ -172,5 +213,27 @@
 .notificationDropdown {
     width: 30rem;
     height: 400px;
+    overflow: auto;
+}
+
+.mobileNotificationModal{
+    height: 400px;
+    overflow: auto;
+}
+
+.mobileNotificationModal a{
+    text-decoration: none !important;
+}
+
+.mobileNotificationModalList{
+    width: 100%;
+}
+
+.finalizeRequest{
+    align-items: baseline;
+}
+
+.dailyUpdateTable{
+    height: 500px;
     overflow: auto;
 }
